Programming languages and paradigms/Interpreter/examples/bad/division_by_zero.ho
func main() {
    var x = 1/0; // error:2:14: division by zero
}